waybar: fix some spacing with the new layout

--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -56,14 +56,18 @@ button:hover {
 	box-shadow: inset 0 -3px #ffffff;
 }
 
-#clock,
-#battery,
 #cpu,
 #memory,
 #temperature,
-#network,
+#clock,
 #pulseaudio {
 	padding: 0 10px;
+}
+#network {
+	padding: 0 0px;
+}
+#battery {
+	padding-left: 3px;
 }
 
 #pulseaudio { color: @maroon; }
